# compiler

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  check.yml
contrib/: format-all.sh  format.py  format.sh  python.sh  setup-hooks.sh
include/codegen/: RegisterAllocator.h
include/codegen/register_allocator/: LinearScanAllocator.h  NaiveAllocator.h
include/common/: ExtensionMode.h  Linkage.h  OpException.h  Precision.h
include/common/ops/: ASHR.h  Add.h  And.h  BitCast.h  EQ.h  FAdd.h  FDiv.h  FMul.h  FNeg.h  FPExt.h  FPToSI.h  FPToUI.h  FPTrunc.h  FRem.h  FSub.h  LSHR.h  Mul.h  NE.h  OEQ.h  OGE.h  OGT.h  OLE.h  OLT.h  ONE.h  Or.h  SDiv.h  SExt.h  SGE.h  SGT.h  SHL.h  SIToFP.h  SLE.h  SLT.h  SRem.h  Sub.h  Trunc.h  UDiv.h  UGE.h  UGT.h  UIToFP.h  (+5 more)
include/ir/: Argument.h  Attribute.h  BasicBlock.h  Constant.h  ConstantVisitor.h  Function.h  GlobalValue.h  GlobalVar.h  Instruction.h  InstructionVisitor.h  Module.h  Type.h  TypeVisitor.h  Use.h  Value.h
include/ir/Constant/: ArrayConstant.h  DoubleConstant.h  FloatConstant.h  FloatingConstant.h  I16Constant.h  I1Constant.h  I32Constant.h  I64Constant.h  I8Constant.h  IntegerConstant.h  NullPtrConstant.h  PoisonValue.h  VoidValue.h
include/ir/Instruction/: ASHR.h  Add.h  Alloca.h  And.h  BinaryFloatingArithmeticOperator.h  Br.h  (+49 more)
include/ir_parser/: Lexer.h  Parser.h  Symbol.h  Token.h  TokenKind.def  ir_parser.h
include/mc/: DataDirective.h  Directive.h  Fragment.h  FragmentBuilder.h  ImmediateOperand.h  Instruction.h  Label.h  LabelDirective.h  LabelOperand.h  Line.h  Operand.h  Program.h  RegisterOperand.h  Section.h  ZeroDirective.h
include/mir/: BasicBlock.h  BasicBlockBuilder.h  BasicBlockOperand.h  Condition.def  Condition.h  Constant.h  ConstantVisitor.h  Formatting.h  Function.h  FunctionOperand.h  GlobalVar.h  GlobalVarOperand.h  Immediate.h  ImmediateOperand.h  Instruction.h  InstructionVisitor.h  IntegerImmediate.h  MemoryOperand.h  Module.h  PhysicalRegister.h  Register.h  RegisterKind.h  RegisterOperand.h  StackFrame.h  StackRelativeOffsetImmediate.h  StackSlot.h  VirtualRegister.h
include/utils/: ArrowProxy.h  Hash.h  IndirectIterator.h  Memory.h  SetOps.h  StringJoiner.h
lib/: CMakeLists.txt
lib/codegen/register_allocator/: LinearScanAllocator.cpp  NaiveAllocator.cpp
lib/ir/: BasicBlock.cpp  Function.cpp  GlobalVar.cpp  Instruction.cpp  Module.cpp  Use.cpp  Value.cpp
lib/ir/Constant/: ArrayConstant.cpp  FloatingConstant.cpp  IntegerConstant.cpp
lib/ir/Instruction/: BinaryFloatingArithmeticOperators.cpp  BinaryFloatingRelationalOperators.cpp  BinaryIntegerArithmeticOperators.cpp  BinaryIntegerRelationalOperators.cpp  BitCast.cpp  Call.cpp  FloatingCastingOperators.cpp  FloatingToIntegerCastingOperators.cpp  GetElementPtr.cpp  IntegerCastingOperators.cpp  IntegerToFloatingCastingOperators.cpp  Phi.cpp  Select.cpp  UnaryFloatingArithmeticOperators.cpp
lib/ir/Type/: ArrayType.cpp  Double.cpp  Float.cpp  FunctionType.cpp  I1.cpp  I16.cpp  I32.cpp  I64.cpp  I8.cpp  Ptr.cpp  Void.cpp
lib/ir_parser/: Lexer.cpp  Parser.cpp  ir_parser.cpp
lib/mc/: Fragment.cpp  Instruction.cpp  Program.cpp
lib/mir/: BasicBlock.cpp  Function.cpp  GlobalVar.cpp  Instruction.cpp  Module.cpp  StackFrame.cpp  StackSlot.cpp
lib/mir/Constant/: I16ArrayConstant.cpp  I32ArrayConstant.cpp  I64ArrayConstant.cpp  I8ArrayConstant.cpp
lib/mir/Instruction/: Terminator.cpp
lib/opt/ir/: FunctionTransform.cpp  PassManager.cpp
lib/opt/ir/passes/: AlgebraicSimplification.cpp  BasicBlockMerging.cpp  BranchSimplification.cpp  ConstantFolding.cpp  DeadCodeElimination.cpp  DominatorTreeAnalysis.cpp  FunctionInlining.cpp  JumpThreading.cpp  Mem2Reg.cpp  PoisonFreeze.cpp  PoisonPropagation.cpp  UnreachableBlockElimination.cpp  VerificationAnalysis.cpp
lib/opt/mc/: FragmentTransform.cpp
lib/opt/mc/passes/: RedundantLabelElimination.cpp
lib/opt/mir/: BasicBlockTransform.cpp  FunctionTransform.cpp
lib/opt/mir/passes/: ConstantPropagation.cpp  ConstantReuse.cpp  DeadCodeElimination.cpp  IdentityMoveElimination.cpp  LiveVariableAnalysis.cpp  ZeroRegisterReplacement.cpp
lib/targets/riscv/: RISCVBackendDriver.cpp
lib/targets/riscv/codegen/: RISCVMCGen.cpp  RISCVMIRGen.cpp
lib/targets/riscv/mir/: RISCVRegister.cpp
lib/targets/riscv/mir/Instruction/: RISCVCall.cpp  RISCVRet.cpp
lib/targets/riscv/opt/mc/: RISCVPassManager.cpp
lib/targets/riscv/opt/mc/passes/: RISCVFallthrough.cpp
lib/targets/riscv/opt/mir/: RISCVPassManager.cpp
tests/lib/: CMakeLists.txt
tests/lib/ir/Instruction/: ASHRTest.cpp  AddTest.cpp  AllocaTest.cpp  AndTest.cpp  BrTest.cpp  CondBrTest.cpp  FAddTest.cpp  FCmpTest.cpp  FDivTest.cpp  FMulTest.cpp  FNegTest.cpp  FPExtTest.cpp  FPTruncTest.cpp  FRemTest.cpp  FSubTest.cpp  ICmpTest.cpp  LSHRTest.cpp  LoadTest.cpp  MulTest.cpp  OrTest.cpp  PhiTest.cpp  RetTest.cpp  SDivTest.cpp  SExtTest.cpp  SHLTest.cpp  SRemTest.cpp  SelectTest.cpp  StoreTest.cpp  SubTest.cpp  TruncTest.cpp  UDivTest.cpp  URemTest.cpp  XorTest.cpp  ZExtTest.cpp
tests/lib/ir_parser/: LexerTest.cpp  ParserTest.cpp  ir_parser_test.cpp
tests/lib/opt/ir/passes/: BranchSimplificationTest.cpp  ConstantFoldingTest.cpp  DeadCodeEliminationTest.cpp  DominatorTreeAnalysisTest.cpp  JumpThreadingTest.cpp  UnreachableBlockEliminationTest.cpp
tools/: CMakeLists.txt
tools/mini-llc/: CMakeLists.txt  main.cpp
tools/xllc/: CMakeLists.txt  main.cpp
(+554 files in other folders)
